syntax = "proto3";
package apigatewayfromscratch.users.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";


message LoginRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string token = 1;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message MeUserRequest {
  string token = 1;
}

message MeUserResponse {
  string id = 2;
}


service User {
  rpc SignUp (SignUpRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/v1/users/signup"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }
  rpc UserFromToken (MeUserRequest) returns (MeUserResponse);
}